--- a/Market/pyproject.toml
+++ b/Market/pyproject.toml
@@ -1,22 +1,23 @@
-[tool.poetry]
+[project]
 name = "market"
 version = "0.1.0"
-description = ""
-authors = ["JonAJ <jonajmail@gmail.com>"]
+description = "Add your description here"
 readme = "README.md"
+requires-python = ">=3.13"
+dependencies = [
+    "alembic>=1.15.1",
+    "async-fastapi-jwt-auth>=0.6.6",
+    "asyncpg>=0.30.0",
+    "bcrypt>=4.3.0",
+    "faker>=37.0.2",
+    "fastapi>=0.115.11",
+    "pydantic-settings>=2.8.1",
+    "pydantic[email]>=2.10.6",
+    "sqlalchemy>=2.0.39",
+    "uvicorn>=0.34.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-fastapi = "^0.115.11"
-uvicorn = {extras = ["all"], version = "^0.34.0"}
-sqlalchemy = "^2.0.39"
-pydantic-settings = "^2.8.1"
-pydantic = {extras = ["email"], version = "^2.10.6"}
-alembic = "^1.15.1"
-asyncpg = "^0.30.0"
-pytest = "^8.3.5"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+]
