--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - backend
     restart:
       always
+    depends_on:
+      - postgres_database
 
   postgres_database:
     container_name: postgres_database
