--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,20 @@ services:
     networks:
       - backend
     
-
+  redis_database:
+    image: redis:alpine3.21
+    container_name: redis_database
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    command: /bin/sh -c "redis-server --requirepass $$REDIS_PASSWORD"
+    ports:
+      - "${REDIS_PORT}:6379"
+    volumes:
+       - .redis:/data
+    restart: always
+    networks:
+      - backend
+    
 networks: 
   backend:
     driver: bridge
