--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
       always
     depends_on:
       - postgres_database
+      - redis_database
 
   postgres_database:
     container_name: postgres_database
