--- a/Market/pyproject.toml
+++ b/Market/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "fastapi>=0.115.11",
     "pydantic-settings>=2.8.1",
     "pydantic[email]>=2.10.6",
+    "redis>=5.2.1",
     "sqlalchemy>=2.0.39",
     "uvicorn>=0.34.0",
 ]
