--- a/Market/pyproject.toml
+++ b/Market/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic[email]>=2.10.6",
     "redis>=5.2.1",
     "sqlalchemy>=2.0.39",
+    "typer>=0.15.2",
     "uvicorn>=0.34.0",
 ]
 
