--- a/Market/Dockerfile
+++ b/Market/Dockerfile
@@ -11,6 +11,8 @@ FROM python:3.13.2-slim-bullseye
 COPY --from=builder /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
 COPY --from=builder /usr/local/bin /usr/local/bin
 
-COPY /app/* /app/
+COPY /app/ /app/
 
 WORKDIR /app
+
+CMD ["uvicorn", "--factory", "main:create_app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
