--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -13,6 +13,7 @@ repositories:
     url: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
   - name: kafka-ui
     url: https://provectus.github.io/kafka-ui-charts
+  
 
 
 releases:
@@ -55,29 +56,37 @@ releases:
   #     - k8s/values/kafka-ui.yaml
   #     - k8s/values/{{ .Environment.Name }}/kafka-ui.yaml.gotmpl
 
-  - name: zookeeper
+  # - name: zookeeper
+  #   namespace: {{ .Environment.Name }}
+  #   chart: bitnami/zookeeper
+  #   version: 11.1.6
+  #   values:
+  #     - k8s/values/zookeeper.yaml
+  #     - k8s/values/{{ .Environment.Name }}/zookeeper.yaml.gotmpl
+
+
+  # - name: clickhouse-operator
+  #   namespace: {{ .Environment.Name }}
+  #   chart: bitnami/clickhouse-operator
+  #   version: 0.2.4
+  #   values:
+  #     - k8s/values/clickhouse-operator.yaml
+  #     - k8s/values/{{ .Environment.Name }}/clickhouse-operator.yaml.gotmpl
+
+  # - name: clickhouse-cluster
+  #   namespace: {{ .Environment.Name }}
+  #   chart: bitnami/clickhouse
+  #   version: 9.2.2
+  #   values:
+  #     - k8s/values/clickhouse.yaml
+  #     - k8s/values/{{ .Environment.Name }}/clickhouse.yaml.gotmpl
+  
+  - name: airflow
     namespace: {{ .Environment.Name }}
-    chart: bitnami/zookeeper
-    version: 11.1.6
+    chart: bitnami/airflow
+    version: 24.1.0
     values:
-      - k8s/values/zookeeper.yaml
-      - k8s/values/{{ .Environment.Name }}/zookeeper.yaml.gotmpl
-
-
-  - name: clickhouse-operator
-    namespace: {{ .Environment.Name }}
-    chart: bitnami/clickhouse-operator
-    version: 0.2.4
-    values:
-      - k8s/values/clickhouse-operator.yaml
-      - k8s/values/{{ .Environment.Name }}/clickhouse-operator.yaml.gotmpl
-
-  - name: clickhouse-cluster
-    namespace: {{ .Environment.Name }}
-    chart: bitnami/clickhouse
-    version: 9.2.2
-    values:
-      - k8s/values/clickhouse.yaml
-      - k8s/values/{{ .Environment.Name }}/clickhouse.yaml.gotmpl
-
+      - k8s/values/airflow.yaml
+      # - k8s/values/{{ .Environment.Name }}/airflow.yaml.gotmpl
+    
     
