--- a/Market/pyproject.toml
+++ b/Market/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aioredis>=2.0.1",
     "alembic>=1.15.1",
     "async-fastapi-jwt-auth>=0.6.6",
     "asyncpg>=0.30.0",
