minio and airflow

--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -13,80 +13,80 @@ repositories:
     url: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
   - name: kafka-ui
     url: https://provectus.github.io/kafka-ui-charts
+  - name: airflow
+    url: https://airflow.apache.org
   
 
 
 releases:
-
-  # - name: postgresql-ha
-  #   namespace: {{ .Environment.Name }}
-  #   chart: bitnami/postgresql-ha
-  #   values:
-  #     - k8s/values/pgsql.yaml
-  #     - k8s/values/{{ .Environment.Name }}/pgsql.yaml.gotmpl
+  - name: postgresql-ha
+    namespace: {{ .Environment.Name }}
+    chart: bitnami/postgresql-ha
+    values:
+      - k8s/values/pgsql.yaml.gotmpl
   
-  # - name: redis
-  #   namespace: {{ .Environment.Name }}
-  #   chart: bitnami/redis
-  #   values:
-  #     - k8s/values/redis.yaml
-  #     - k8s/values/{{ .Environment.Name }}/redis.yaml.gotmpl
+  - name: redis
+    namespace: {{ .Environment.Name }}
+    chart: bitnami/redis
+    values:
+      - k8s/values/redis.yaml.gotmpl
 
-  # - name: mongodb
-  #   namespace: {{ .Environment.Name }}
-  #   chart: bitnami/mongodb
-  #   values:
-  #     - k8s/values/mongo.yaml
-  #     - k8s/values/{{ .Environment.Name }}/mongo.yaml.gotmpl
+  - name: mongodb
+    namespace: {{ .Environment.Name }}
+    chart: bitnami/mongodb
+    values:
+      - k8s/values/mongo.yaml.gotmpl
 
-  # - name: kafka
-  #   namespace: {{ .Environment.Name }}
-  #   chart: bitnami/kafka
-  #   version: 24.0.0
-  #   values:
-  #     - k8s/values/kafka.yaml
-  #     - k8s/values/{{ .Environment.Name }}/kafka.yaml.gotmpl
+  - name: kafka
+    namespace: {{ .Environment.Name }}
+    chart: bitnami/kafka
+    version: 24.0.0
+    values:
+      - k8s/values/kafka.yaml.gotmpl
 
-  # - name: kafka-ui
-  #   namespace: {{ .Environment.Name }}
-  #   chart: kafka-ui/kafka-ui
-  #   needs:
-  #     - kafka
-  #   values:
-  #     - k8s/values/kafka-ui.yaml
-  #     - k8s/values/{{ .Environment.Name }}/kafka-ui.yaml.gotmpl
+  - name: kafka-ui
+    namespace: {{ .Environment.Name }}
+    chart: kafka-ui/kafka-ui
+    needs:
+      - kafka
+    values:
+      - k8s/values/kafka-ui.yaml.gotmpl
 
-  # - name: zookeeper
-  #   namespace: {{ .Environment.Name }}
-  #   chart: bitnami/zookeeper
-  #   version: 11.1.6
-  #   values:
-  #     - k8s/values/zookeeper.yaml
-  #     - k8s/values/{{ .Environment.Name }}/zookeeper.yaml.gotmpl
+  - name: zookeeper
+    namespace: {{ .Environment.Name }}
+    chart: bitnami/zookeeper
+    version: 11.1.6
+    values:
+      - k8s/values/zookeeper.yaml.gotmpl
 
+  - name: clickhouse-operator
+    namespace: {{ .Environment.Name }}
+    chart: bitnami/clickhouse-operator
+    version: 0.2.4
+    values:
+      - k8s/values/clickhouse-operator.yaml.gotmpl
 
-  # - name: clickhouse-operator
-  #   namespace: {{ .Environment.Name }}
-  #   chart: bitnami/clickhouse-operator
-  #   version: 0.2.4
-  #   values:
-  #     - k8s/values/clickhouse-operator.yaml
-  #     - k8s/values/{{ .Environment.Name }}/clickhouse-operator.yaml.gotmpl
-
-  # - name: clickhouse-cluster
-  #   namespace: {{ .Environment.Name }}
-  #   chart: bitnami/clickhouse
-  #   version: 9.2.2
-  #   values:
-  #     - k8s/values/clickhouse.yaml
-  #     - k8s/values/{{ .Environment.Name }}/clickhouse.yaml.gotmpl
+  - name: clickhouse-cluster
+    namespace: {{ .Environment.Name }}
+    chart: bitnami/clickhouse
+    version: 9.2.2
+    needs:
+      - zookeeper
+    values:
+      - k8s/values/clickhouse.yaml.gotmpl
   
+  - name: minio
+    namespace: {{ .Environment.Name }}
+    chart: bitnami/minio
+    version: 16.0.10
+    values:
+      - k8s/values/minio.yaml.gotmpl
+
   - name: airflow
     namespace: {{ .Environment.Name }}
-    chart: bitnami/airflow
-    version: 24.1.0
+    chart: airflow/airflow
+    version: 1.0.0
     values:
-      - k8s/values/airflow.yaml
-      # - k8s/values/{{ .Environment.Name }}/airflow.yaml.gotmpl
+      - k8s/values/airflow.yaml.gotmpl
     
     
