--- a/Market/pyproject.toml
+++ b/Market/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "typer>=0.15.2",
     "uvicorn>=0.34.0",
     "motor>=3.7.0",
+    "prometheus-client>=0.20.0",
 ]
 
 [dependency-groups]
