--- a/Market/pyproject.toml
+++ b/Market/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "sqlalchemy>=2.0.39",
     "typer>=0.15.2",
     "uvicorn>=0.34.0",
+    "prometheus-fastapi-instrumentator>=7.1.0",
 ]
 
 [dependency-groups]
