--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,8 +48,32 @@ services:
     networks:
       - backend
 
-  
-    
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - "9090:9090"
+    networks:
+      - backend
+    depends_on:
+      - market
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - backend
+    depends_on:
+      - prometheus
+    volumes:
+      - ./grafana-data:/var/lib/grafana
+
 networks: 
   backend:
     driver: bridge
