--- a/Market/pyproject.toml
+++ b/Market/pyproject.toml
@@ -3,7 +3,8 @@ name = "market"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.10"
+
 dependencies = [
     "alembic>=1.15.1",
     "async-fastapi-jwt-auth>=0.6.6",
@@ -16,7 +17,12 @@ dependencies = [
     "redis>=5.2.1",
     "sqlalchemy>=2.0.39",
     "typer>=0.15.2",
-    "uvicorn>=0.34.0",
+    "uvicorn[standard]>=0.34.0",
+    "motor>=3.4.0",
+    "yookassa>=2.3.0",
+    "aiokafka>=0.10.0",
+    "orjson>=3.9.15",
+    "loguru>=0.7.2"
 ]
 
 [dependency-groups]
