--- a/StreamingProcessing/pyproject.toml
+++ b/StreamingProcessing/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiochclient>=2.6.0",
     "aiohttp>=3.12.6",
     "aiokafka>=0.12.0",
+    "faker>=37.3.0",
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
 ]
