--- a/Market/pyproject.toml
+++ b/Market/pyproject.toml
@@ -17,11 +17,11 @@ dependencies = [
     "sqlalchemy>=2.0.39",
     "typer>=0.15.2",
     "uvicorn>=0.34.0",
-
     "motor>=3.7.0",
     "prometheus-client>=0.20.0",
     "prometheus-fastapi-instrumentator>=7.1.0",
-
+    "yookassa>=3.5.0",
+    "aiokafka>=0.12.0",
 ]
 
 [dependency-groups]
